update tmp detail

--- a/src/app/product-detail/product-detail.component.html
+++ b/src/app/product-detail/product-detail.component.html
@@ -292,6 +292,85 @@
         </aside>
       </div>
     </div>
+    <div class="container">
+      <!-- <div class="pc_toolbar_top active">
+        <div class="container">
+          <div class="pro-info">
+            <div class="product-name">Vỏ Case KENOO ESPORT G362 - Pink</div>
+            <div class="addcart-price">
+              <div class="price">
+                Tổng chi phí
+                <div>
+                  790.000 đ
+                </div>
+              </div>
+              <div class="add-cart-buttons"><button type="button" data-loading-text="Đang tải..."
+                  class="btn-add-cart btn-add-cart-2"><svg width="21" height="20" viewBox="0 0 21 20" fill="none"
+                    xmlns="http://www.w3.org/2000/svg">
+                    <path
+                      d="M8.00033 18.3334C8.46056 18.3334 8.83366 17.9603 8.83366 17.5001C8.83366 17.0398 8.46056 16.6667 8.00033 16.6667C7.54009 16.6667 7.16699 17.0398 7.16699 17.5001C7.16699 17.9603 7.54009 18.3334 8.00033 18.3334Z"
+                      stroke="#005EC4" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"></path>
+                    <path
+                      d="M17.1663 18.3334C17.6266 18.3334 17.9997 17.9603 17.9997 17.5001C17.9997 17.0398 17.6266 16.6667 17.1663 16.6667C16.7061 16.6667 16.333 17.0398 16.333 17.5001C16.333 17.9603 16.7061 18.3334 17.1663 18.3334Z"
+                      stroke="#005EC4" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"></path>
+                    <path
+                      d="M1.33301 0.833252H4.66634L6.89967 11.9916C6.97588 12.3752 7.1846 12.7199 7.4893 12.9652C7.79399 13.2105 8.17526 13.3407 8.56634 13.3333H16.6663C17.0574 13.3407 17.4387 13.2105 17.7434 12.9652C18.0481 12.7199 18.2568 12.3752 18.333 11.9916L19.6663 4.99992H5.49967"
+                      stroke="#005EC4" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"></path>
+                  </svg>
+                  Thêm vào giỏ
+                </button> <button type="button" data-loading-text="Đang tải..." class="btn-add-cart "><svg width="17"
+                    height="18" viewBox="0 0 17 18" fill="none" xmlns="http://www.w3.org/2000/svg">
+                    <path
+                      d="M15.9187 9.83092L15.9187 8.16922L9.33085 8.16922L9.33085 1.58134H7.66915L7.66915 8.16922L1.08127 8.16922L1.08127 9.83092L7.66915 9.83092L7.66915 16.4188H9.33085L9.33085 9.83092L15.9187 9.83092Z"
+                      fill="white"></path>
+                  </svg>
+      
+                  Mua hàng </button></div>
+            </div>
+          </div>
+          <div class="actions">
+            <div class="tab">Thông số kỹ thuật</div>
+            <div class="tab">Chi tiết sản phẩm</div>
+            <div class="tab">Video</div>
+            <div class="tab active">Review sản phẩm</div>
+            <div class="go-top"><i aria-hidden="true" class="far fa-angle-up"></i>
+              Lên đầu trang
+            </div>
+          </div>
+        </div>
+      </div> -->
+
+    </div>
+    <div class="container">
+      <div class="mb_toolbar_bottom hide-pc active">
+        <div class="mb-product-name">Vỏ Case KENOO ESPORT G362 - Pink</div>
+        <div class="price">
+          790.000 đ
+        </div>
+        <div class="add-cart-buttons"><button type="button" data-loading-text="Đang tải..."
+            class="btn-add-cart btn-add-cart-2"><svg width="21" height="20" viewBox="0 0 21 20" fill="none"
+              xmlns="http://www.w3.org/2000/svg">
+              <path
+                d="M8.00033 18.3334C8.46056 18.3334 8.83366 17.9603 8.83366 17.5001C8.83366 17.0398 8.46056 16.6667 8.00033 16.6667C7.54009 16.6667 7.16699 17.0398 7.16699 17.5001C7.16699 17.9603 7.54009 18.3334 8.00033 18.3334Z"
+                stroke="#005EC4" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"></path>
+              <path
+                d="M17.1663 18.3334C17.6266 18.3334 17.9997 17.9603 17.9997 17.5001C17.9997 17.0398 17.6266 16.6667 17.1663 16.6667C16.7061 16.6667 16.333 17.0398 16.333 17.5001C16.333 17.9603 16.7061 18.3334 17.1663 18.3334Z"
+                stroke="#005EC4" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"></path>
+              <path
+                d="M1.33301 0.833252H4.66634L6.89967 11.9916C6.97588 12.3752 7.1846 12.7199 7.4893 12.9652C7.79399 13.2105 8.17526 13.3407 8.56634 13.3333H16.6663C17.0574 13.3407 17.4387 13.2105 17.7434 12.9652C18.0481 12.7199 18.2568 12.3752 18.333 11.9916L19.6663 4.99992H5.49967"
+                stroke="#005EC4" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"></path>
+            </svg>
+            Thêm vào giỏ
+          </button> <button type="button" data-loading-text="Đang tải..." class="btn-add-cart "><svg width="17" height="18"
+              viewBox="0 0 17 18" fill="none" xmlns="http://www.w3.org/2000/svg">
+              <path
+                d="M15.9187 9.83092L15.9187 8.16922L9.33085 8.16922L9.33085 1.58134H7.66915L7.66915 8.16922L1.08127 8.16922L1.08127 9.83092L7.66915 9.83092L7.66915 16.4188H9.33085L9.33085 9.83092L15.9187 9.83092Z"
+                fill="white"></path>
+            </svg>
+      
+            Mua hàng </button></div>
+      </div>
+    </div>
   </div>
   
   <!-- Main Container End --> 
