--- a/src/app/product-detail/product-detail.component.css
+++ b/src/app/product-detail/product-detail.component.css
@@ -53,27 +53,217 @@
     background: seashell;
 }
 
-.owl-carousel.owl-drag .owl-item {
- display: block;
- width: auto !important;
+
+
+/* add gio hang */
+@media screen and (min-width: 1024px) {
+    .mb_toolbar_bottom{
+        display: none;
+    }
 }
 
-.owl-stage .owl-item {
-    display: block;
-    width: auto !important;
-   }
+@media screen and (max-width: 1024px) {
+    .mb_toolbar_bottom {
+        display: none;
+        width: calc(100% - 32px);
+        background: #fff;
+        box-shadow: 0 -2px 10px rgba(0, 0, 0, .16);
+        position: fixed;
+        bottom: 0;
+        left: 0;
+        z-index: 99;
+        flex-direction: column;
+        padding: 12px 16px
+    }
 
+    .mb_toolbar_bottom.active {
+        display: flex !important;
+    }
 
-   /**/
+    .mb_toolbar_bottom .mb-product-name {
+        font-weight: 600;
+        font-size: 14px;
+        line-height: 21px;
+        color: #005ec4;
+        margin-bottom: 12px
+    }
 
-.slick-slider {
-   /* float: left; */
-  }
-  
-body .slick-prev, 
-body .slick-next {
-    /* height: 45px;
-    width: 40px;
-    background: grey !important;
-    z-index: 100; */
+    .mb_toolbar_bottom .price {
+        font-weight: 700;
+        font-size: 24px;
+        color: #f9495f;
+        margin-bottom: 16px
+    }
+
+    .mb_toolbar_bottom .add-cart-buttons {
+        display: flex;
+        flex-direction: column-reverse;
+        justify-content: space-between;
+        margin-top: 12px
+    }
+
+    .mb_toolbar_bottom .add-cart-buttons .btn-add-cart {
+        width: 100%;
+        height: 44px;
+        background: #005ec4;
+        border: none;
+        font-weight: 700;
+        font-size: 16px;
+        color: #fff;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        text-transform: uppercase
+    }
+
+    .mb_toolbar_bottom .add-cart-buttons .btn-add-cart svg {
+        margin-right: 11px
+    }
+
+    .mb_toolbar_bottom .add-cart-buttons .btn-add-cart:hover {
+        background-color: #007bff
+    }
+
+    .mb_toolbar_bottom .add-cart-buttons .btn-add-cart.disable {
+        background-color: #ccc !important
+    }
+
+    .mb_toolbar_bottom .add-cart-buttons .btn-add-cart.disable:hover {
+        cursor: no-drop
+    }
+
+    .mb_toolbar_bottom .add-cart-buttons .btn-add-cart.preorder {
+        background: #f9495f !important
+    }
+
+    .mb_toolbar_bottom .add-cart-buttons .btn-add-cart-2 {
+        background: #fff !important;
+        border: 1px solid #005ec4 !important;
+        color: #005ec4 !important;
+        margin-top: 10px
+    }
+
+    .mb_toolbar_bottom .add-cart-buttons .btn-add-cart-2:hover {
+        color: #fa9f2c;
+        background-color: #fff;
+        border: 1px solid #fa9f2c
+    }
+
+    .mb_toolbar_bottom .add-cart-buttons .btn-add-cart-2:hover svg path {
+        stroke: #fa9f2c
+    }
+}
+/*pc*/
+.pc_toolbar_top {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    background: #fff;
+    z-index: 9999;
+    box-shadow: 0 4px 8px rgba(194,198,201,.32);
+    padding-top: 20px;
+    display: none
+}
+
+.pc_toolbar_top.active {
+    display: block
+}
+
+.pc_toolbar_top .pro-info {
+    display: flex;
+    justify-content: space-between;
+    margin-bottom: 23px
+}
+
+.pc_toolbar_top .pro-info .product-name {
+    font-weight: 700;
+    font-size: 16px;
+    line-height: 24px;
+    display: flex;
+    align-items: center;
+    color: #005ec4;
+    align-self: self-start;
+    padding-right: 20px
+}
+
+.pc_toolbar_top .pro-info .addcart-price {
+    display: flex;
+    align-items: center
+}
+
+.pc_toolbar_top .pro-info .addcart-price .price {
+    font-size: 16px
+}
+
+.pc_toolbar_top .pro-info .addcart-price .price div {
+    font-weight: 700;
+    font-size: 20px;
+    line-height: 30px;
+    color: #f9495f;
+    white-space: nowrap
+}
+
+.pc_toolbar_top .pro-info .addcart-price button {
+    width: 255px;
+    height: 44px;
+    background: #005ec4;
+    border: none;
+    font-weight: 700;
+    font-size: 16px;
+    color: #fff;
+    margin-left: 30px;
+    text-transform: uppercase
+}
+
+.pc_toolbar_top .pro-info .addcart-price button.preorder {
+    background: #f9495f!important
+}
+
+.pc_toolbar_top .actions {
+    display: flex;
+    font-weight: 600;
+    font-size: 18px;
+    color: #29324e
+}
+
+.pc_toolbar_top .actions div {
+    border-bottom: 3px solid transparent;
+    cursor: pointer;
+    padding-bottom: 5px;
+    text-align: center
+}
+
+.pc_toolbar_top .actions div.tab {
+    min-width: 130px;
+    margin-right: 40px
+}
+
+.pc_toolbar_top .actions div.tab.active,.pc_toolbar_top .actions div.tab:hover {
+    border-color: #005ec4
+}
+
+.pc_toolbar_top .actions div.go-top {
+    flex: 1;
+    display: flex;
+    align-items: center;
+    justify-content: flex-end;
+    color: #005ec4
+}
+
+.pc_toolbar_top .actions div.go-top i {
+    margin-right: 15px;
+    font-size: 20px
+}
+
+.pc_toolbar_top .add-cart-buttons {
+    flex-direction: row-reverse
+}
+
+.pc_toolbar_top .add-cart-buttons .btn-add-cart {
+    width: 175px!important
+}
+
+.pc_toolbar_top .add-cart-buttons .btn-add-cart.btn-add-cart-2 {
+    margin-left: 8px
 }
