--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,7 +1,7 @@
 <app-slider></app-slider>
 <!-- service section -->
 <ng-container *ngIf="isLoadComplete">
-  <div class="container-home">
+  <div class="container">
     <div class="row">
       <div class="block__header" style="margin-top: 25px;">
         <h2 class="block__header__title">ƯU ĐÃI ĐẶC BIỆT</h2>
@@ -70,7 +70,7 @@
   </div>
 
   <!-- All products-->
-  <div class="container-home">
+  <div class="container">
     <div class="home-tab">
       <div class="block__header">
         <h2 class="block__header__title">SẢN PHẨM BÁN CHẠY</h2>
@@ -87,7 +87,7 @@
       </div>
     </div>
   </div>
-  <div class="container-home">
+  <div class="container">
     <div class="row home-tab">
       <div class="col-md-12 text-center" >
         <a [routerLink]="['/danh-muc-san-pham-g']" [queryParams]="{typeStatus: 2}" class="but_medium2"><i
@@ -95,7 +95,7 @@
       </div>
     </div>
   </div>
-  <div class="container-home">
+  <div class="container">
     <div class="home-tab">
     <div class="block__header">
       <h2 class="block__header__title">SẢN PHẨM MỚI</h2>
@@ -116,7 +116,7 @@
       </div>
     </div>
   </div>
-  <div class="container-home">
+  <div class="container">
     <div class="row home-tab">
       <div class="col-md-12 text-center">
         <a [routerLink]="['/danh-muc-san-pham-g']" [queryParams]="{typeStatus: 3}" class="but_medium2"><i
@@ -124,7 +124,7 @@
       </div>
     </div>
   </div>
-  <div class="container-home">
+  <div class="container">
     <div class="home-tab">
     <div class="block__header">
       <h2 class="block__header__title">SẢN PHẨM NỔI BẬT</h2>
@@ -145,7 +145,7 @@
       </div>
     </div>
   </div>
-  <div class="container-home">
+  <div class="container">
     <div class="row home-tab">
       <div class="col-md-12 text-center">
         <a [routerLink]="['/danh-muc-san-pham-g']" [queryParams]="{typeStatus: 4}" class="but_medium2"><i
@@ -153,7 +153,7 @@
       </div>
     </div>
   </div>
-  <div class="container-home">
+  <div class="container">
     <div class="block__header home-tab">
       <h2 class="block__header__title">DANH MỤC SẢN PHẨM</h2>
     </div>
@@ -173,7 +173,7 @@
       </ng-container>
     </div>
   </div>
-  <div class="container-home">
+  <div class="container">
     <div class="home-tab">
       <div class="block__header">
         <h2 class="block__header__title">THƯƠNG HIỆU</h2>
