--- a/src/app/product-detail/product-detail.component.css
+++ b/src/app/product-detail/product-detail.component.css
@@ -56,16 +56,21 @@
 
 
 /* add gio hang */
-@media screen and (min-width: 1024px) {
+@media screen and (min-width: 1025px) {
     .mb_toolbar_bottom{
         display: none;
     }
+    .pc_toolbar_top.active {
+        display: inline-block
+    }
+
 }
 
 @media screen and (max-width: 1024px) {
+   
     .mb_toolbar_bottom {
         display: none;
-        width: calc(100% - 32px);
+        width: calc(100% ); 
         background: #fff;
         box-shadow: 0 -2px 10px rgba(0, 0, 0, .16);
         position: fixed;
@@ -82,7 +87,7 @@
 
     .mb_toolbar_bottom .mb-product-name {
         font-weight: 600;
-        font-size: 14px;
+        font-size: 16px;
         line-height: 21px;
         color: #005ec4;
         margin-bottom: 12px
@@ -90,7 +95,7 @@
 
     .mb_toolbar_bottom .price {
         font-weight: 700;
-        font-size: 24px;
+        font-size: 22px;
         color: #f9495f;
         margin-bottom: 16px
     }
@@ -160,20 +165,16 @@
     left: 0;
     width: 100%;
     background: #fff;
-    z-index: 9999;
+    z-index: 2;
     box-shadow: 0 4px 8px rgba(194,198,201,.32);
     padding-top: 20px;
     display: none
 }
 
-.pc_toolbar_top.active {
-    display: block
-}
-
 .pc_toolbar_top .pro-info {
     display: flex;
     justify-content: space-between;
-    margin-bottom: 23px
+    /* margin-bottom: 23px */
 }
 
 .pc_toolbar_top .pro-info .product-name {
@@ -193,7 +194,7 @@
 }
 
 .pc_toolbar_top .pro-info .addcart-price .price {
-    font-size: 16px
+    font-size: 20px
 }
 
 .pc_toolbar_top .pro-info .addcart-price .price div {
