--- a/src/app/product-detail/product-detail.component.html
+++ b/src/app/product-detail/product-detail.component.html
@@ -17,19 +17,26 @@
   <div class="main-container col2-left-layout">
     <div class="container">
       <div class="row">
-        <div class="col-main col-sm-9 col-xs-12">
+        <div class="col-main col-sm-12 col-xs-12">
           <div class="product-view-area">
             <div class="product-big-image col-xs-12 col-sm-5 col-lg-5 col-md-5">
               <div class="icon-sale-label sale-left">Sale</div>
               <div class="large-image"> <a [href]="urlImg + imgfirst" class="cloud-zoom" id="zoom1" rel="useWrapper: false, adjustY:0, adjustX:20"> <img class="zoom-img" [src]="urlImg + imgfirst" alt="products"> </a> </div>
-              <div class="flexslider flexslider-thumb">
-                <owl-carousel-o [options]="customOptions">
+              <div >
+
+                 <ngx-slick-carousel class="carousel" #slickModal="slick-carousel" [config]="slideConfig">
+                   <div ngxSlickItem  *ngFor="let item of product?.productImages ;  let i = index ;"class="slide">
+                      <li><a (click)="changeImageLarge(item.id)" class='cloud-zoom-gallery' rel="useZoom: 'zoom1', smallImage: '{{urlImg + item.imageUrl}}' "><img style="border: 1px solid;" [src]="urlImg + item.imageUrl" alt = "Thumbnail 2"/></a></li>
+                   </div>
+                </ngx-slick-carousel>
+
+                <!-- <owl-carousel-o [options]="customOptions">
                   <ng-container *ngFor="let item of product?.productImages ;  let i = index ;">
                     <ng-template carouselSlide [id]="item.id.toString()">
                       <li><a (click)="changeImageLarge(item.id)" class='cloud-zoom-gallery' rel="useZoom: 'zoom1', smallImage: '{{urlImg + item.imageUrl}}' "><img [src]="urlImg + item.imageUrl" alt = "Thumbnail 2"/></a></li>
                     </ng-template>
                   </ng-container>
-                </owl-carousel-o>
+                </owl-carousel-o> -->
               </div>
             </div>
             <div class="col-xs-12 col-sm-7 col-lg-7 col-md-7 product-details-area">
@@ -213,7 +220,7 @@
             </div>
           </div>
         </div>
-        <aside class="right sidebar col-sm-3 col-xs-12">
+        <!-- <aside class="right sidebar col-sm-3 col-xs-12">
           <div class="block shop-by-side">
             <div class="sidebar-bar-title">
               <h3>Shop By</h3>
@@ -289,86 +296,57 @@
               </ul>
             </div>
           </div>
-        </aside>
+        </aside> -->
       </div>
     </div>
-    <div class="container">
-      <!-- <div class="pc_toolbar_top active">
+    <div class="container" *ngIf="displayToolbar_Top">
+      <div class="pc_toolbar_top active">
         <div class="container">
           <div class="pro-info">
             <div class="product-name">Vỏ Case KENOO ESPORT G362 - Pink</div>
             <div class="addcart-price">
-              <div class="price">
+              <div class="">
                 Tổng chi phí
-                <div>
-                  790.000 đ
-                </div>
+                <div class="price">
+                  <p class="special-price"> <span class="price-label">Special Price</span> <span class="price"> {{product?.promotionPrice | currency: "VND"}}</span> </p>
+                  <p class="old-price"> <span class="price-label">Regular Price:</span> <span class="price">{{product?.price | currency: "VND"}} </span> </p>
+                
               </div>
-              <div class="add-cart-buttons"><button type="button" data-loading-text="Đang tải..."
-                  class="btn-add-cart btn-add-cart-2"><svg width="21" height="20" viewBox="0 0 21 20" fill="none"
-                    xmlns="http://www.w3.org/2000/svg">
-                    <path
-                      d="M8.00033 18.3334C8.46056 18.3334 8.83366 17.9603 8.83366 17.5001C8.83366 17.0398 8.46056 16.6667 8.00033 16.6667C7.54009 16.6667 7.16699 17.0398 7.16699 17.5001C7.16699 17.9603 7.54009 18.3334 8.00033 18.3334Z"
-                      stroke="#005EC4" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"></path>
-                    <path
-                      d="M17.1663 18.3334C17.6266 18.3334 17.9997 17.9603 17.9997 17.5001C17.9997 17.0398 17.6266 16.6667 17.1663 16.6667C16.7061 16.6667 16.333 17.0398 16.333 17.5001C16.333 17.9603 16.7061 18.3334 17.1663 18.3334Z"
-                      stroke="#005EC4" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"></path>
-                    <path
-                      d="M1.33301 0.833252H4.66634L6.89967 11.9916C6.97588 12.3752 7.1846 12.7199 7.4893 12.9652C7.79399 13.2105 8.17526 13.3407 8.56634 13.3333H16.6663C17.0574 13.3407 17.4387 13.2105 17.7434 12.9652C18.0481 12.7199 18.2568 12.3752 18.333 11.9916L19.6663 4.99992H5.49967"
-                      stroke="#005EC4" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"></path>
-                  </svg>
+              </div>
+              <div class="add-cart-buttons"><button type="button" (click)="addToShopingCard(product)"
+                  class="btn-add-cart btn-add-cart-2"><svg width="17" style="vertical-align: sub;"
+                  height="18" viewBox="0 0 17 18" fill="none" xmlns="http://www.w3.org/2000/svg">
+                  <path
+                    d="M15.9187 9.83092L15.9187 8.16922L9.33085 8.16922L9.33085 1.58134H7.66915L7.66915 8.16922L1.08127 8.16922L1.08127 9.83092L7.66915 9.83092L7.66915 16.4188H9.33085L9.33085 9.83092L15.9187 9.83092Z"
+                    fill="white"></path>
+                </svg>
                   Thêm vào giỏ
-                </button> <button type="button" data-loading-text="Đang tải..." class="btn-add-cart "><svg width="17"
-                    height="18" viewBox="0 0 17 18" fill="none" xmlns="http://www.w3.org/2000/svg">
-                    <path
-                      d="M15.9187 9.83092L15.9187 8.16922L9.33085 8.16922L9.33085 1.58134H7.66915L7.66915 8.16922L1.08127 8.16922L1.08127 9.83092L7.66915 9.83092L7.66915 16.4188H9.33085L9.33085 9.83092L15.9187 9.83092Z"
-                      fill="white"></path>
-                  </svg>
+                </button> <button type="button" [routerLink]="['/gio-hang']" routerLinkActive="router-link-active"  class="btn-add-cart ">
       
-                  Mua hàng </button></div>
+                  <i class="fa fa-shopping-cart"></i>&nbsp;  Mua hàng </button></div>
             </div>
-          </div>
-          <div class="actions">
-            <div class="tab">Thông số kỹ thuật</div>
-            <div class="tab">Chi tiết sản phẩm</div>
-            <div class="tab">Video</div>
-            <div class="tab active">Review sản phẩm</div>
-            <div class="go-top"><i aria-hidden="true" class="far fa-angle-up"></i>
-              Lên đầu trang
-            </div>
-          </div>
+          </div>      
         </div>
-      </div> -->
+      </div>
 
     </div>
-    <div class="container">
+    <div class="container" *ngIf="displayToolbar_bottom">
       <div class="mb_toolbar_bottom hide-pc active">
-        <div class="mb-product-name">Vỏ Case KENOO ESPORT G362 - Pink</div>
+        <div class="mb-product-name">{{product?.productName}}</div>
         <div class="price">
-          790.000 đ
+            <p class="special-price"> <span class="price-label">Special Price</span> <span class="price"> {{product?.promotionPrice | currency: "VND"}}</span> </p>
+            <p class="old-price"> <span class="price-label">Regular Price:</span> <span class="price">{{product?.price | currency: "VND"}} </span> </p>
+          
         </div>
-        <div class="add-cart-buttons"><button type="button" data-loading-text="Đang tải..."
-            class="btn-add-cart btn-add-cart-2"><svg width="21" height="20" viewBox="0 0 21 20" fill="none"
-              xmlns="http://www.w3.org/2000/svg">
-              <path
-                d="M8.00033 18.3334C8.46056 18.3334 8.83366 17.9603 8.83366 17.5001C8.83366 17.0398 8.46056 16.6667 8.00033 16.6667C7.54009 16.6667 7.16699 17.0398 7.16699 17.5001C7.16699 17.9603 7.54009 18.3334 8.00033 18.3334Z"
-                stroke="#005EC4" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"></path>
-              <path
-                d="M17.1663 18.3334C17.6266 18.3334 17.9997 17.9603 17.9997 17.5001C17.9997 17.0398 17.6266 16.6667 17.1663 16.6667C16.7061 16.6667 16.333 17.0398 16.333 17.5001C16.333 17.9603 16.7061 18.3334 17.1663 18.3334Z"
-                stroke="#005EC4" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"></path>
-              <path
-                d="M1.33301 0.833252H4.66634L6.89967 11.9916C6.97588 12.3752 7.1846 12.7199 7.4893 12.9652C7.79399 13.2105 8.17526 13.3407 8.56634 13.3333H16.6663C17.0574 13.3407 17.4387 13.2105 17.7434 12.9652C18.0481 12.7199 18.2568 12.3752 18.333 11.9916L19.6663 4.99992H5.49967"
-                stroke="#005EC4" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"></path>
-            </svg>
-            Thêm vào giỏ
-          </button> <button type="button" data-loading-text="Đang tải..." class="btn-add-cart "><svg width="17" height="18"
+        <div class="add-cart-buttons"><button type="button" class="btn-add-cart btn-add-cart-2" (click)="addToShopingCard(product)">
+          <svg width="17" height="18"
               viewBox="0 0 17 18" fill="none" xmlns="http://www.w3.org/2000/svg">
               <path
                 d="M15.9187 9.83092L15.9187 8.16922L9.33085 8.16922L9.33085 1.58134H7.66915L7.66915 8.16922L1.08127 8.16922L1.08127 9.83092L7.66915 9.83092L7.66915 16.4188H9.33085L9.33085 9.83092L15.9187 9.83092Z"
-                fill="white"></path>
+                fill="blue"></path>
             </svg>
-      
-            Mua hàng </button></div>
+             Thêm vào giỏ</button>
+           <button type="button" class="btn-add-cart " [routerLink]="['/gio-hang']" routerLinkActive="router-link-active" > <i class="fa fa-shopping-cart"></i> &nbsp; Mua hàng </button></div>
       </div>
     </div>
   </div>
@@ -388,34 +366,10 @@
             <div class="slider-items-products">
               <div id="related-product-slider" class="product-flexslider hidden-buttons">
                 <div class="slider-items slider-width-col4 fadeInUp">
-                  <ngx-slick-carousel class="carousel home__product" #slickModal="slick-carousel" [config]="slideConfig" (init)="slickInit($event)">
-                    <div ngxSlickItem *ngFor="let item of productsRelate" class="slide">
-                      <div class="product">
-                        <div class="percent" *ngIf="item.rateDiscount > 0"><span>-{{item.rateDiscount}}%</span></div>
-                        <div class="product__thumb"><a [routerLink]="['/chi-tiet']"
-                          (click)="handleViewDetailProduct($event,item)"
-                            class="product__link"><img
-                              [src]='urlImg + item.imageUrl'
-                              alt="{{item.productName}}"></a></div>
-                        <div class="product__bottom">
-                          <div class="product__title"><a
-                              href="https://www.tncstore.vn/card-man-hinh-asus-proart-geforce-rtx-4060-ti-oc-edition-16gb-ddr6.html"
-                              class="product__link">{{item.productName}}</a></div>
-                          <div class="product__rate">
-                            <div class="rate__star" *ngIf="item?.rate >= 0">
-                              <div class="rate_item">
-                                <i class="fa fa-star yellow" *ngFor="let rate of counterRate(item?.rate)"></i>
-                                <i class="fa fa-star-o" *ngFor="let rate of counterRate(5 - item?.rate)"></i>
-                                <span class="rate__text"> &nbsp;{{item?.countRate}} đánh giá</span>
-                              </div>
-                            </div>
-                          </div>
-                          <div class="product__price"><span class="price__selling">{{item.promotionPrice | currency: "VND" }}</span> <span class="price__old">{{item.price | currency: "VND" }}</span></div> <button type="button" class="add-to-cart">GIỎ HÀNG</button>
-                        </div>
-                      </div>
-                  
-                    </div>
-                  </ngx-slick-carousel>
+                  <div *ngIf="this.productsRelate">
+                    <app-product-recent [listProduct]="this.productsRelate?.data"
+                      [isAutoPlay]="false"></app-product-recent>
+                  </div>
                 </div>
               </div>
             </div>
