--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -4,55 +4,21 @@
       <div class="header-top">
         <div class="container">
           <div class="row">
-            <div class="col-sm-4 col-md-4 col-xs-12"> 
+            <div class=""> 
               <!-- Default Welcome Message -->
               <div class="welcome-msg hidden-xs hidden-sm">{{hello}}</div>
               <!-- Language &amp; Currency wrapper -->
-              <div class="language-currency-wrapper">
-                <!-- <div class="inner-cl">
-                  <div class="block block-language form-language">
-                    <div class="lg-cur"><span><img src="./../assets/images/flag-default.jpg" alt="French"><span class="lg-fr">French</span><i class="fa fa-angle-down"></i></span></div>
-                    <ul>
-                      <li><a class="selected" href="#"><img src="./../assets/images/flag-english.jpg" alt="english"><span>English</span></a></li>
-                      <li><a href="#"><img src="./../assets/images/flag-default.jpg" alt="French"><span>French</span></a></li>
-                      <li><a href="#"><img src="./../assets/images/flag-german.jpg" alt="German"><span>German</span></a></li>
-                      <li><a href="#"><img src="./../assets/images/flag-brazil.jpg" alt="Brazil"><span>Brazil</span></a></li>
-                      <li><a href="#"><img src="./../assets/images/flag-chile.jpg" alt="Chile"><span>Chile</span></a></li>
-                      <li><a href="#"><img src="./../assets/images/flag-spain.jpg" alt="Spain"><span>Spain</span></a></li>
-                    </ul>
-                  </div>
-                  <div class="block block-currency">
-                    <div class="item-cur"><span>USD</span><i class="fa fa-angle-down"></i></div>
-                    <ul>
-                      <li><a href="#"><span class="cur_icon">€</span>EUR</a></li>
-                      <li><a href="#"><span class="cur_icon">¥</span>JPY</a></li>
-                      <li><a class="selected" href="#"><span class="cur_icon">$</span>USD</a></li>
-                    </ul>
-                  </div>
-                </div> -->
-              </div>
+           
             </div>
             
             <!-- top links -->
-            <div class="headerlinkmenu col-md-8 col-sm-8 col-xs-12"> <span class="phone  hidden-xs hidden-sm">Hotline: <a href="tel:+84978691194"> 0978.691.194</a></span>
+            <div class="headerlinkmenu">
               <ul class="links">
-                <li class="hidden-xs"><a title="Bảo hành" href="#"><span>Bảo hành: <a href="tel:+84908708294">0908.708.294</a></span></a></li>
-                <li><a title="Store Locator" href="#"><span>Vị trí cửa hàng</span></a></li>
-                <li><a title="Thanh toán" [routerLink]="['/thanh-toan']"><span>Thanh toán</span></a></li>
-                <!-- <li>
-                  <div class="dropdown"><a class="current-open" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" href="#"><span>Người dùng </span> <i class="fa fa-angle-down"></i></a>
-                    <ul class="dropdown-menu" role="menu">
-                      <li><a [routerLink]="['/nguoi-dung']">Tài khoản</a></li>
-                      <li><a [routerLink]="['/danh-sach-yeu-thich']">Yêu thích</a></li>
-                      <li><a [routerLink]="['/lich-su-mua-hang']">Theo dõi đơn hàng</a></li>
-                      <li><a [routerLink]="['/gioi-thieu']">Giới thiệu</a></li>
-                      <li class="divider"></li>
-                      <li><a [routerLink]="['/nguoi-dung']">Đăng nhập</a></li>
-                      <li><a [routerLink]="['/dang-ky']">Đăng ký</a></li>
-                    </ul>
-                  </div>
-                </li>
-                <li><a title="login" [routerLink]="['/nguoi-dung']"><span>Đăng nhập</span></a></li> -->
+                <li> <span class="phone hidden-sm">Hotline: <a href="tel:+84978691194"> 0978.691.194</a></span></li>
+                <li ><a title="Bảo hành" href="#"><span class="phone">Bảo hành: <a href="tel:+84908708294">0908.708.294</a></span></a></li>
+                <li  class="hidden-xs"><a title="Store Locator" href="#"><span>Vị trí cửa hàng</span></a></li>
+                <li  class="hidden-xs"><a title="Thanh toán" [routerLink]="['/thanh-toan']"><span>Thanh toán</span></a></li>
+              
               </ul>
             </div>
           </div>
