--- a/src/assets/css/responsive.css
+++ b/src/assets/css/responsive.css
@@ -1393,10 +1393,10 @@ ul.footer-company-links {
 .col2-left-layout .nav-tabs.product-tabs > li > a {
 	padding: 8px 12px;
 }
-.header-top {
+/* .header-top {
 	padding-bottom: 0;
 	padding-top: 4px;
-}
+} */
 .jtv-logo-block {
 	padding-right: 0px;
 }
