--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -122,7 +122,7 @@
     line-height: 0px;
     font-size: 0px;
     cursor: pointer;
-    background: #99a0ad;;
+    background: #eaebed;;
     color: transparent;
     top: 50%;
     transform: translate(0, -50%);
