--- a/src/app/about-us/about-us.component.html
+++ b/src/app/about-us/about-us.component.html
@@ -19,7 +19,7 @@
   
   <div class="main container">
  
-     <div class="about-page home__tnc__intro">
+     <div class="about-page home__intro">
         <div class="col-xs-12 col-sm-6 dm_intro_text"> 
           
           <!-- <h1>Chào mừng bạn đến <span class="text_color">DM Computer</span></h1> -->
