--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,4 +1,4 @@
-<div class="jtv-service-area">
+<div class="jtv-service-area" style="margin-top: 25px;">
   <div class="container">
     <div class="row">
       <div class="col col-md-3 col-sm-6 col-xs-12">
@@ -54,6 +54,15 @@
       <div class="row">
         <div class="col-sm-6 col-md-3 col-xs-12">
           <div class="footer-logo logoImg"><a href="index.html"><img [src]="urlLogo" alt="fotter logo"></a> </div>
+          <!-- <google-map height="220px" width="400px" [center]="center" [zoom]="zoom">
+            <map-marker #marker="mapMarker"
+            *ngFor="let markerPosition of markerPositions"
+            [position]="markerPosition"
+            (mapClick)="openInfoWindow(marker)"></map-marker>
+<map-info-window>DM Computer</map-info-window>
+           
+          </google-map> -->
+          
           <p>
           </p>
           <div class="social">
