--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -3,12 +3,10 @@
     <div class="header-container">
       <div class="header-top">
         <div class="container">
-          <div class="row">
+          <!-- <div class="row"> -->
             <div class=""> 
               <!-- Default Welcome Message -->
               <div class="welcome-msg hidden-xs hidden-sm">{{hello}}</div>
-              <!-- Language &amp; Currency wrapper -->
-           
             </div>
             
             <!-- top links -->
@@ -17,11 +15,10 @@
                 <li> <span class="phone hidden-sm">Hotline: <a href="tel:+84978691194"> 0978.691.194</a></span></li>
                 <li ><a title="Bảo hành" href="#"><span class="phone">Bảo hành: <a href="tel:+84908708294">0908.708.294</a></span></a></li>
                 <li  class="hidden-xs"><a title="Store Locator" href="#"><span>Vị trí cửa hàng</span></a></li>
-                <li  class="hidden-xs"><a title="Thanh toán" [routerLink]="['/thanh-toan']"><span>Thanh toán</span></a></li>
-              
+                <li  class="hidden-xs"><a title="Thanh toán" [routerLink]="['/thanh-toan']"><span>Thanh toán</span></a></li>    
               </ul>
             </div>
-          </div>
+          <!-- </div> -->
         </div>
       </div>
       <!-- header inner -->
@@ -45,9 +42,7 @@
                         <option value="" selected>Tất cả</option>
                         <ng-container *ngFor="let item of this.menuSearch">
                           <option  [value]="item.urlSlug">{{item.categoryName}}</option>
-                        </ng-container>
-                        
-
+                        </ng-container>                  
                       </select>
                       <input #inputSearch (keydown.enter)="searchFilter($event,inputSearch.value, cateSelect.value)"  type="text" class="form-control" placeholder="Bạn muốn tìm..." name="search">
                       <button class="btn-search" type="button"  (click)="searchFilter($event,inputSearch.value, cateSelect.value)"><i class="fa fa-search"></i></button>
