--- a/src/app/not-found/not-found.component.html
+++ b/src/app/not-found/not-found.component.html
@@ -1,14 +1,14 @@
 <!-- Breadcrumbs -->
-<div class="breadcrumbs">
+<div class="">
     <div class="container">
-        <div class="row">
-            <div class="col-xs-12">
-                <ul>
-                    <li class="home"> <a title="Go to Home Page" href="index.html">Home</a><span>&raquo;</span></li>
-                    <li><strong>404 Error </strong></li>
-                </ul>
-            </div>
-        </div>
+        <div class="breadcrumb_dm">
+            <ul class="breadcrumb__list">
+              <li><a href="/"><i aria-hidden="true" class="fa fa-home"></i></a> <i aria-hidden="true"
+                  class="fa fa-angle-right"></i></li>
+              <li><a [routerLink]="['/']" routerLinkActive="router-link-active">Trang chủ</a> <i aria-hidden="true" class="fa fa-angle-right"></i></li>
+              <li><a >404</a> </li>
+            </ul>
+          </div>
     </div>
 </div>
 <!-- Breadcrumbs End -->
@@ -17,10 +17,10 @@
 <div class="error-page">
     <div class="container">
         <div class="error_pagenotfound"> <strong>4<span id="animate-arrow">0</span>4 </strong> <br />
-            <b>Oops... Page Not Found!</b> <em>Sorry the Page Could not be Found here.</em>
-            <p>Try using the button below to go to main page of the site</p>
+            <b>Yêu cầu của bạn không tìm thấy!</b> <em>Xin lỗi vì sự bất tiện này.</em>
+            <p>Thử tìm kiếm trang hoặc sản phẩm khác nhé!</p>
             <br />
-            <a href="index.html" class="button-back"><i class="icon-arrow-left-circle icons"></i>&nbsp; Go to Back</a>
+            <a routerLink="[/]" class="button-back"><i class="icon-arrow-left-circle icons"></i>&nbsp; Trang chủ</a>
         </div>
         <!-- end error page notfound -->
     </div>
