--- a/src/app/product-recent/product-recent.component.html
+++ b/src/app/product-recent/product-recent.component.html
@@ -1,8 +1,7 @@
 
-<ngx-slick-carousel id="slickModal" class="carousel home__product" #slickModal="slick-carousel" [config]="slideConfig"
-  (init)="slickInit($event)">
-  <div ngxSlickItem *ngFor="let item of productRecents" class="slide">
-    <div class="product">
+<ngx-slick-carousel id="slickModal" class="carousel home__product" #slickModal="slick-carousel" [config]="this.isMobile == false ? slideConfig : slideConfigMobile">
+  <div ngxSlickItem *ngFor="let item of productRecents" class="product">
+    <div class="">
       <div class="percent" *ngIf="item.rateDiscount > 0"><span>-{{item.rateDiscount}}%</span></div>
       <div class="product__thumb"><a [routerLink]="['/chi-tiet']" (click)="handleViewDetailProduct($event,item)"
           class="product__link"><img [src]='urlImg + item.imageUrl' alt="{{item.productName}}"></a>
